version mobile fix
version mobile améliorer

--- a/partials-scss/_mixins.scss
+++ b/partials-scss/_mixins.scss
@@ -65,6 +65,6 @@ $desktop: 1400px;
 
 @mixin text-footer {
   font-family: "Tex Gyre Adventor Regular";
-  font-size: 24px;
+  font-size: 20px;
   color: #fff;
 }
