--- a/style.scss
+++ b/style.scss
@@ -220,6 +220,7 @@
   margin-top: 50px;
   @include mixins.phone {
     margin: 10px 50px;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 .grid-icon {
@@ -257,8 +258,7 @@
   margin: 100px 20px;
   width: 10vw;
   @include mixins.phone {
-    width: 4vw;
-    margin: 20px 20px;
+    display:none;
   }
 }
 .partenaire1 {
@@ -269,10 +269,15 @@
   width: 75vw;
   height: 0.1vh;
   margin: auto;
-  @include mixins.phone;
 }
 .logo-footer {
   margin: auto;
+  @include mixins.phone {
+    margin: 0px;
+    width: 10vw;
+    grid-column-start: 1;
+    grid-row-start: 0;
+  }
 }
 .text-adresse {
   color: #fff;
@@ -287,7 +292,7 @@
   @include mixins.text-footer;
   @include mixins.phone {
     font-size: 12px;
-    margin: 0px;
+    margin: 10px;
   }
 }
 .icon-group {
@@ -311,7 +316,6 @@
   width: 17vw;
   height: -4vw;
   border-radius: 1vw;
-  border-width: 0.5vw;
   border-color: variables.$rouge;
   margin: auto;
   grid-column-start: 4;
@@ -319,6 +323,8 @@
   @include mixins.text-footer;
   @include mixins.phone {
     font-size: 12px;
+    grid-column-start: 2;
+    grid-row-start: 6;
   }
 }
 .btn:hover {
@@ -329,5 +335,8 @@
   grid-column-start: 4;
   grid-row-start: 3;
   width: 7vw;
+  @include mixins.phone {
+    display: none;
+  }
 }
 /*--- Fin section footer*/
